--- a/index.html
+++ b/index.html
@@ -1,101 +1,100 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ar">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>الصفحة الرئيسية</title>
-  <style>
-    body { font-family: Arial, sans-serif; direction: rtl; text-align: right; padding: 24px; background: #f6f9fc; color:#111; }
-    .card { background: #fff; padding: 20px; border-radius: 12px; box-shadow: 0 4px 18px rgba(15,23,42,0.08); max-width:800px; margin: 18px auto; }
-    h1 { margin-top:0; }
-    label, input, textarea, button { display:block; width:100%; margin-top:8px; }
-    input { padding:10px; border-radius:8px; border:1px solid #ddd; }
-    button { margin-top:12px; padding:10px; border-radius:8px; border:0; background:#2563eb; color:#fff; cursor:pointer; }
-    .admin-profile { margin-top:18px; display:flex; gap:16px; align-items:center; }
-    .admin-profile img { width:120px; height:120px; object-fit:cover; border-radius:12px; border:1px solid #eee; }
-    .visitor-name { margin-top:10px; font-weight:600; color:#0f172a; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>الصفحة الرئيسية</title>
+<style>
+body { font-family: Arial; direction: rtl; padding:20px; background:#f0f4f8; }
+.card { max-width:600px; margin:20px auto; background:#fff; padding:20px; border-radius:12px; box-shadow:0 4px 20px rgba(0,0,0,0.1); }
+input, button { width:100%; padding:10px; margin-top:10px; border-radius:8px; border:1px solid #ccc; }
+button { background:#2563eb; color:#fff; border:none; cursor:pointer; }
+.section { margin-top:20px; }
+.admin-profile img { width:120px; height:120px; object-fit:cover; border-radius:12px; margin-left:10px; }
+</style>
 </head>
 <body>
-  <div class="card">
-    <h1>أهلاً بك</h1>
-    <p>ادخل اسمك عشان تواصل التصفح</p>
 
-    <form id="visitorForm">
-      <label for="name">الاسم (مطلوب)</label>
-      <input id="name" name="name" required placeholder="اكتب اسمك هنا" />
-      <button type="submit">دخول</button>
-    </form>
+<div class="card">
+<h2>أهلاً بك في الموقع</h2>
+<p>ادخل اسمك لتتمكن من التصفح:</p>
+<form id="visitorForm">
+  <input type="text" id="visitorName" placeholder="اكتب اسمك هنا" required>
+  <button type="submit">دخول</button>
+</form>
 
-    <div id="greeting" style="display:none;">
-      <p class="visitor-name">مرحباً، <span id="visitorNameText"></span></p>
-      <p>الصفحة الرئيسية:</p>
+<div id="greeting" class="section" style="display:none;">
+  <p>مرحباً، <span id="nameDisplay"></span></p>
+</div>
+
+<div id="adminSection" class="section"></div>
+</div>
+
+<script>
+const visitorForm = document.getElementById('visitorForm');
+const greeting = document.getElementById('greeting');
+const nameDisplay = document.getElementById('nameDisplay');
+const adminSection = document.getElementById('adminSection');
+
+visitorForm.addEventListener('submit', async (e)=>{
+  e.preventDefault();
+  const name = document.getElementById('visitorName').value.trim();
+  if(!name) return alert('الاسم مطلوب');
+  localStorage.setItem('visitorName', name);
+  showGreeting(name);
+
+  // إرسال الاسم للسيرفر
+  try {
+    await fetch('/api/visitor', {
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body: JSON.stringify({name})
+    });
+  } catch(err){ console.error('Visitor API error',err);}
+});
+
+function showGreeting(name){
+  nameDisplay.textContent = name;
+  greeting.style.display='block';
+  visitorForm.style.display='none';
+  fetchProfile();
+}
+
+// Fetch admin profile
+async function fetchProfile(){
+  try{
+    const res = await fetch('/api/public/profile');
+    const json = await res.json();
+    renderProfile(json);
+  } catch(err){
+    adminSection.innerHTML='<p>فشل تحميل بيانات الادمن.</p>';
+    console.error(err);
+  }
+}
+
+function renderProfile(data){
+  if(!data.exists){
+    adminSection.innerHTML='<p>لا توجد بيانات للعرض بعد.</p>';
+    return;
+  }
+  const d = data.data;
+  const uploadedAt = d.updatedAt ? new Date(d.updatedAt._seconds*1000).toLocaleString() : 'غير معروف';
+  adminSection.innerHTML = `
+    <div class="admin-profile" style="display:flex;align-items:center;">
+      ${d.imageUrl? `<img src="${d.imageUrl}" alt="صورة الادمن">` : ''}
+      <div>
+        <h3>${d.name||''}</h3>
+        <p>${d.description||''}</p>
+        <small>أخر تعديل: ${uploadedAt}</small>
+      </div>
     </div>
+  `;
+}
 
-    <div id="adminSection"></div>
-  </div>
+// Check localStorage
+const savedName = localStorage.getItem('visitorName');
+if(savedName) showGreeting(savedName);
+</script>
 
-  <script>
-    async function fetchProfile() {
-      const res = await fetch('/api/public/profile');
-      const json = await res.json();
-      return json;
-    }
-
-    function renderProfile(data) {
-      const container = document.getElementById('adminSection');
-      if (!data.exists) {
-        container.innerHTML = '<p>لا توجد بيانات للعرض بعد.</p>';
-        return;
-      }
-      const d = data.data;
-      const uploadedAt = d.updatedAt ? new Date(d.updatedAt._seconds * 1000).toLocaleString() : 'غير معروف';
-      container.innerHTML = `
-        <div class="admin-profile">
-          ${d.imageUrl ? `<img src="${d.imageUrl}" alt="صورة الإدارة">` : ''}
-          <div>
-            <h3>${d.name || ''}</h3>
-            <p>${d.description || ''}</p>
-            <small>أُنشئت/آخر تعديل: ${uploadedAt}</small>
-          </div>
-        </div>
-      `;
-    }
-
-    document.getElementById('visitorForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const name = document.getElementById('name').value.trim();
-      if (!name) return alert('الاسم مطلوب');
-      const res = await fetch('/api/visitor', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ name })
-      });
-      if (!res.ok) {
-        const err = await res.json().catch(()=>({error:'error'}));
-        return alert(err.error || 'حدث خطأ');
-      }
-      // show greeting and set visitor name visible
-      document.getElementById('visitorNameText').textContent = name;
-      document.getElementById('greeting').style.display = 'block';
-      document.getElementById('visitorForm').style.display = 'none';
-      // optionally keep name in localStorage
-      localStorage.setItem('visitorName', name);
-    });
-
-    // If name exists in localStorage show greeting
-    const saved = localStorage.getItem('visitorName');
-    if (saved) {
-      document.getElementById('visitorNameText').textContent = saved;
-      document.getElementById('greeting').style.display = 'block';
-      document.getElementById('visitorForm').style.display = 'none';
-    }
-
-    // load admin profile
-    fetchProfile().then(renderProfile).catch(err => {
-      document.getElementById('adminSection').innerHTML = '<p>فشل تحميل بيانات الادمن.</p>';
-      console.error(err);
-    });
-  </script>
 </body>
 </html>
