--- a/dashboard.html
+++ b/dashboard.html
@@ -1,149 +1,105 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ar">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Dashboard - Admin</title>
 <style>
 body { font-family: Arial, sans-serif; direction: rtl; padding:20px; background:#f0f4f8; }
 .container { max-width:900px; margin:20px auto; }
 .card { background:#fff; padding:18px; border-radius:12px; box-shadow: 0 6px 20px rgba(2,6,23,0.06); margin-bottom:16px; }
 input, textarea, button { display:block; width:100%; margin-top:8px; padding:10px; border-radius:8px; border:1px solid #ddd; }
-.row { display:flex; gap:12px; }
-.col { flex:1; }
 button.primary { background:#16a34a; color:#fff; border:0; cursor:pointer; }
 button.danger { background:#ef4444; color:#fff; border:0; cursor:pointer; }
 img.preview { width:160px; height:160px; object-fit:cover; border-radius:10px; border:1px solid #eee; }
-small { color:#475569; }
-table { width:100%; border-collapse: collapse; }
-th, td { border:1px solid #ddd; padding:8px; text-align:right; }
-th { background:#f3f4f6; }
 </style>
 </head>
 <body>
 <div class="container">
-  <div style="display:flex; justify-content:space-between; align-items:center;">
-    <h2>لوحة التحكم</h2>
-    <div>
-      <button id="logoutBtn">تسجيل خروج</button>
-    </div>
-  </div>
+<h2>لوحة التحكم</h2>
+<button id="logoutBtn">تسجيل خروج</button>
 
-  <div class="card">
-    <h3>البيانات الحالية</h3>
-    <div id="current"></div>
-  </div>
+<div class="card">
+<h3>البيانات الحالية</h3>
+<div id="currentProfile"></div>
+</div>
 
-  <div class="card">
-    <h3>رفع / تحديث البيانات</h3>
-    <form id="uploadForm" enctype="multipart/form-data">
-      <label>الاسم (مطلوب)</label>
-      <input name="name" id="nameField" required />
-      <label>الوصف</label>
-      <textarea name="description" id="descField"></textarea>
-      <label>صورة (jpg/png) - اختيارية</label>
-      <input type="file" name="image" id="imageField" accept=".jpg,.jpeg,.png" />
-      <div style="margin-top:10px; display:flex; gap:10px;">
-        <button class="primary" type="submit">ارفع / حدّث</button>
-        <button class="danger" id="deleteBtn" type="button">احذف</button>
-      </div>
-      <p id="msg" style="color: #0b5; margin-top:8px;"></p>
-    </form>
-  </div>
+<div class="card">
+<h3>رفع / تحديث البيانات</h3>
+<form id="uploadForm" enctype="multipart/form-data">
+<label>الاسم (مطلوب)</label>
+<input name="name" id="nameField" required>
+<label>الوصف</label>
+<textarea name="description" id="descField"></textarea>
+<label>صورة (jpg/png) - اختيارية</label>
+<input type="file" name="image" id="imageField" accept=".jpg,.jpeg,.png">
+<button class="primary" type="submit">ارفع / حدّث</button>
+<p id="msg" style="color: #0b5; margin-top:8px;"></p>
+</form>
+</div>
 
-  <div class="card">
-    <h3>الزوار الذين سجلوا أسمائهم</h3>
-    <table id="visitorsTable">
-      <thead>
-        <tr><th>الاسم</th><th>تاريخ التسجيل</th></tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
+<div class="card">
+<h3>الزوار</h3>
+<ul id="visitorsList"></ul>
+</div>
 </div>
 
 <script>
-async function fetchProfile() {
-  const res = await fetch('/api/admin/profile');
-  if (!res.ok) {
-    if (res.status === 401) { window.location='/login'; return; }
-    document.getElementById('current').innerText = 'فشل في جلب البيانات';
-    return;
-  }
-  const j = await res.json();
-  if (!j.exists) {
-    document.getElementById('current').innerHTML = '<p>لا توجد بيانات مرفوعة بعد.</p>';
-    return;
-  }
-  const d = j.data;
-  const updatedAt = d.updatedAt ? new Date(d.updatedAt._seconds*1000).toLocaleString() : 'غير معروف';
-  document.getElementById('current').innerHTML = `
-    <div style="display:flex; gap:12px; align-items:center;">
-      ${d.imageUrl ? `<img src="${d.imageUrl}" class="preview" alt="صورة">` : ''}
-      <div>
-        <h4>${d.name || ''}</h4>
-        <p>${d.description || ''}</p>
-        <small>أخر تعديل: ${updatedAt}</small>
-      </div>
-    </div>
-  `;
-  document.getElementById('nameField').value = d.name || '';
-  document.getElementById('descField').value = d.description || '';
+async function fetchProfile(){
+  try{
+    const resProfile = await fetch('/api/admin/profile');
+    const profile = await resProfile.json();
+    const dataJson = await fetch('data.json').then(r=>r.json());
+
+    let html = '';
+    if(profile.exists){
+      html += `<h4>${profile.data.name || ''}</h4>`;
+      html += `<p>${profile.data.description || ''}</p>`;
+    }
+    if(dataJson.imageBase64){
+      html += `<img class="preview" src="data:${dataJson.imageMime};base64,${dataJson.imageBase64}" alt="صورة الادمن">`;
+    }
+    document.getElementById('currentProfile').innerHTML = html;
+
+    if(profile.exists){
+      document.getElementById('nameField').value = profile.data.name || '';
+      document.getElementById('descField').value = profile.data.description || '';
+    }
+  }catch(err){ console.error(err); }
 }
 
-// Fetch visitors
 async function fetchVisitors(){
-  const res = await fetch('/api/admin/visitors');
-  if(!res.ok) return;
-  const j = await res.json();
-  const tbody = document.querySelector('#visitorsTable tbody');
-  tbody.innerHTML = '';
-  j.visitors.forEach(v=>{
-    const tr = document.createElement('tr');
-    const date = v.createdAt ? new Date(v.createdAt).toLocaleString() : '';
-    tr.innerHTML = `<td>${v.name}</td><td>${date}</td>`;
-    tbody.appendChild(tr);
-  });
+  try{
+    const res = await fetch('/api/admin/visitors');
+    const data = await res.json();
+    const ul = document.getElementById('visitorsList');
+    ul.innerHTML = data.visitors.map(v=>`<li>${v.name} - ${v.createdAt ? new Date(v.createdAt).toLocaleString() : ''}</li>`).join('');
+  }catch(err){ console.error(err); }
 }
 
-document.getElementById('uploadForm').addEventListener('submit', async (e) => {
+document.getElementById('uploadForm').addEventListener('submit', async e=>{
   e.preventDefault();
-  const form = e.target;
-  const fd = new FormData(form);
-  const res = await fetch('/api/admin/profile', { method: 'POST', body: fd });
+  const fd = new FormData(e.target);
+  const res = await fetch('/api/admin/profile',{method:'POST', body: fd});
   const j = await res.json();
-  if (!res.ok) {
+  if(res.ok){
+    document.getElementById('msg').textContent = 'تم التحديث بنجاح';
+    fetchProfile();
+    fetchVisitors();
+    setTimeout(()=>document.getElementById('msg').textContent='',3000);
+  } else {
     alert(j.error || 'حدث خطأ');
-    return;
   }
-  document.getElementById('msg').textContent = 'تم الرفع/التحديث بنجاح';
-  fetchProfile();
-  setTimeout(()=>document.getElementById('msg').textContent='', 3000);
 });
 
-document.getElementById('deleteBtn').addEventListener('click', async () => {
-  if (!confirm('هل أنت متأكد من الحذف؟')) return;
-  const res = await fetch('/api/admin/profile', { method: 'DELETE' });
-  const j = await res.json();
-  if (!res.ok) {
-    alert(j.error || 'فشل في الحذف');
-    return;
-  }
-  alert('تم الحذف');
-  fetchProfile();
-  document.getElementById('nameField').value = '';
-  document.getElementById('descField').value = '';
+document.getElementById('logoutBtn').addEventListener('click', async ()=>{
+  await fetch('/api/logout',{method:'POST'});
+  window.location='/login';
 });
 
-document.getElementById('logoutBtn').addEventListener('click', async () => {
-  await fetch('/api/logout', { method: 'POST' });
-  window.location = '/login';
-});
-
-// On load
+// عند تحميل الصفحة
 fetchProfile();
 fetchVisitors();
-setInterval(fetchVisitors, 10000); // تحديث الزوار كل 10 ثواني
 </script>
 </body>
 </html>
