--- a/dashboard.html
+++ b/dashboard.html
@@ -1,59 +1,149 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ar">
 <head>
-<meta charset="UTF-8">
-<title>داشبورد الادمن</title>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Dashboard - Admin</title>
 <style>
-body { font-family: Arial; text-align:center; margin-top:30px; }
-img { max-width:150px; margin-top:10px; }
+body { font-family: Arial, sans-serif; direction: rtl; padding:20px; background:#f0f4f8; }
+.container { max-width:900px; margin:20px auto; }
+.card { background:#fff; padding:18px; border-radius:12px; box-shadow: 0 6px 20px rgba(2,6,23,0.06); margin-bottom:16px; }
+input, textarea, button { display:block; width:100%; margin-top:8px; padding:10px; border-radius:8px; border:1px solid #ddd; }
+.row { display:flex; gap:12px; }
+.col { flex:1; }
+button.primary { background:#16a34a; color:#fff; border:0; cursor:pointer; }
+button.danger { background:#ef4444; color:#fff; border:0; cursor:pointer; }
+img.preview { width:160px; height:160px; object-fit:cover; border-radius:10px; border:1px solid #eee; }
+small { color:#475569; }
+table { width:100%; border-collapse: collapse; }
+th, td { border:1px solid #ddd; padding:8px; text-align:right; }
+th { background:#f3f4f6; }
 </style>
 </head>
 <body>
-<h2>داشبورد الادمن</h2>
+<div class="container">
+  <div style="display:flex; justify-content:space-between; align-items:center;">
+    <h2>لوحة التحكم</h2>
+    <div>
+      <button id="logoutBtn">تسجيل خروج</button>
+    </div>
+  </div>
 
-<form id="adminForm">
-  <input type="text" name="name" placeholder="الاسم"><br>
-  <textarea name="description" placeholder="الوصف"></textarea><br>
-  <input type="file" name="image" accept=".jpg"><br>
-  <button type="submit">رفع / تعديل البيانات</button>
-</form>
+  <div class="card">
+    <h3>البيانات الحالية</h3>
+    <div id="current"></div>
+  </div>
 
-<div id="status" style="margin-top:20px;"></div>
+  <div class="card">
+    <h3>رفع / تحديث البيانات</h3>
+    <form id="uploadForm" enctype="multipart/form-data">
+      <label>الاسم (مطلوب)</label>
+      <input name="name" id="nameField" required />
+      <label>الوصف</label>
+      <textarea name="description" id="descField"></textarea>
+      <label>صورة (jpg/png) - اختيارية</label>
+      <input type="file" name="image" id="imageField" accept=".jpg,.jpeg,.png" />
+      <div style="margin-top:10px; display:flex; gap:10px;">
+        <button class="primary" type="submit">ارفع / حدّث</button>
+        <button class="danger" id="deleteBtn" type="button">احذف</button>
+      </div>
+      <p id="msg" style="color: #0b5; margin-top:8px;"></p>
+    </form>
+  </div>
+
+  <div class="card">
+    <h3>الزوار الذين سجلوا أسمائهم</h3>
+    <table id="visitorsTable">
+      <thead>
+        <tr><th>الاسم</th><th>تاريخ التسجيل</th></tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+</div>
 
 <script>
-const token = localStorage.getItem('token');
-if(!token) window.location.href='/login';
-
-async function fetchData() {
-  const res = await fetch('/api/data');
-  const data = await res.json();
-  if(data.name) {
-    document.getElementById('status').innerHTML = `
-      <h3>البيانات الحالية:</h3>
-      <p>الاسم: ${data.name}</p>
-      <p>الوصف: ${data.description}</p>
-      ${data.imageUrl ? `<img src="${data.imageUrl}"/>` : ''}
-      <p>اخر تحديث: ${data.updatedAt}</p>
-    `;
+async function fetchProfile() {
+  const res = await fetch('/api/admin/profile');
+  if (!res.ok) {
+    if (res.status === 401) { window.location='/login'; return; }
+    document.getElementById('current').innerText = 'فشل في جلب البيانات';
+    return;
   }
+  const j = await res.json();
+  if (!j.exists) {
+    document.getElementById('current').innerHTML = '<p>لا توجد بيانات مرفوعة بعد.</p>';
+    return;
+  }
+  const d = j.data;
+  const updatedAt = d.updatedAt ? new Date(d.updatedAt._seconds*1000).toLocaleString() : 'غير معروف';
+  document.getElementById('current').innerHTML = `
+    <div style="display:flex; gap:12px; align-items:center;">
+      ${d.imageUrl ? `<img src="${d.imageUrl}" class="preview" alt="صورة">` : ''}
+      <div>
+        <h4>${d.name || ''}</h4>
+        <p>${d.description || ''}</p>
+        <small>أخر تعديل: ${updatedAt}</small>
+      </div>
+    </div>
+  `;
+  document.getElementById('nameField').value = d.name || '';
+  document.getElementById('descField').value = d.description || '';
 }
-fetchData();
 
-document.getElementById('adminForm').onsubmit = async (e) => {
+// Fetch visitors
+async function fetchVisitors(){
+  const res = await fetch('/api/admin/visitors');
+  if(!res.ok) return;
+  const j = await res.json();
+  const tbody = document.querySelector('#visitorsTable tbody');
+  tbody.innerHTML = '';
+  j.visitors.forEach(v=>{
+    const tr = document.createElement('tr');
+    const date = v.createdAt ? new Date(v.createdAt).toLocaleString() : '';
+    tr.innerHTML = `<td>${v.name}</td><td>${date}</td>`;
+    tbody.appendChild(tr);
+  });
+}
+
+document.getElementById('uploadForm').addEventListener('submit', async (e) => {
   e.preventDefault();
   const form = e.target;
-  const formData = new FormData(form);
+  const fd = new FormData(form);
+  const res = await fetch('/api/admin/profile', { method: 'POST', body: fd });
+  const j = await res.json();
+  if (!res.ok) {
+    alert(j.error || 'حدث خطأ');
+    return;
+  }
+  document.getElementById('msg').textContent = 'تم الرفع/التحديث بنجاح';
+  fetchProfile();
+  setTimeout(()=>document.getElementById('msg').textContent='', 3000);
+});
 
-  const res = await fetch('/api/data', {
-    method: 'POST',
-    headers: { 'Authorization': token },
-    body: formData
-  });
-  if(res.ok) {
-    alert('تم رفع البيانات');
-    fetchData();
-  } else alert('حصل خطأ');
-}
+document.getElementById('deleteBtn').addEventListener('click', async () => {
+  if (!confirm('هل أنت متأكد من الحذف؟')) return;
+  const res = await fetch('/api/admin/profile', { method: 'DELETE' });
+  const j = await res.json();
+  if (!res.ok) {
+    alert(j.error || 'فشل في الحذف');
+    return;
+  }
+  alert('تم الحذف');
+  fetchProfile();
+  document.getElementById('nameField').value = '';
+  document.getElementById('descField').value = '';
+});
+
+document.getElementById('logoutBtn').addEventListener('click', async () => {
+  await fetch('/api/logout', { method: 'POST' });
+  window.location = '/login';
+});
+
+// On load
+fetchProfile();
+fetchVisitors();
+setInterval(fetchVisitors, 10000); // تحديث الزوار كل 10 ثواني
 </script>
 </body>
 </html>
