--- a/login.html
+++ b/login.html
@@ -1,34 +1,90 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="ar">
 <head>
-  <meta charset="utf-8" />
-  <title>Login</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>تسجيل الدخول</title>
+<style>
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background: #eef2f7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+}
+.container {
+  background: #fff;
+  padding: 40px;
+  border-radius: 12px;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+  text-align: center;
+  width: 90%;
+  max-width: 400px;
+}
+input {
+  width: 100%;
+  padding: 12px;
+  margin: 10px 0;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+}
+button {
+  width: 100%;
+  padding: 12px;
+  background: #28a745;
+  color: #fff;
+  font-size: 16px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+button:hover {
+  background: #218838;
+}
+#status {
+  margin-top: 15px;
+  font-size: 14px;
+  color: red;
+}
+</style>
 </head>
-<body style="font-family:Arial;padding:30px;max-width:400px;margin:auto;">
-  <h2>تسجيل الدخول للداشبورد</h2>
-  <div>
-    <label>اسم المستخدم:<br/><input id="user" /></label><br/><br/>
-    <label>كلمة السر:<br/><input id="pass" type="password" /></label><br/><br/>
-    <button id="loginBtn">دخول</button>
-  </div>
-  <script>
-    document.getElementById('loginBtn').addEventListener('click', async () => {
-      const username = document.getElementById('user').value;
-      const password = document.getElementById('pass').value;
-      const res = await fetch('/api/login', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ username, password })
-      });
-      if (res.ok) {
-        // cookie httpOnly ستوضع تلقائياً؛ نوجه المستخدم إلى /dashboard
-        window.location.href = '/dashboard';
-      } else {
-        const j = await res.json();
-        alert(j.message || 'فشل الدخول');
-      }
+<body>
+<div class="container">
+<h1>تسجيل الدخول للوحة التحكم</h1>
+<input type="text" id="username" placeholder="اسم المستخدم">
+<input type="password" id="password" placeholder="كلمة المرور">
+<button id="loginBtn">تسجيل الدخول</button>
+<p id="status"></p>
+</div>
+
+<script>
+document.getElementById('loginBtn').addEventListener('click', async () => {
+  const username = document.getElementById('username').value.trim();
+  const password = document.getElementById('password').value.trim();
+  if (!username || !password) return alert("اكمل جميع الحقول");
+
+  try {
+    const res = await fetch("/api/login", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ username, password })
     });
-  </script>
+
+    const data = await res.json();
+    if (res.ok) {
+      localStorage.setItem("jwt", data.token);
+      window.location.href = "/dashboard.html";
+    } else {
+      document.getElementById('status').innerText = data.error || "فشل تسجيل الدخول";
+    }
+  } catch (err) {
+    document.getElementById('status').innerText = "خطأ في الاتصال بالسيرفر";
+  }
+});
+</script>
 </body>
 </html>
